syntax = 'proto3';

package com.via.sep6.best.movies;

message Movie {
  int32 id = 1;
  string title = 2;
  int32 releaseYear = 3;
}

message GetMoviesRequest {
}

message GetMoviesResponse {
  repeated Movie movies = 1;
}

message GetOneMovieRequest {
  string title = 1;
}

message GetOneMovieResponse {
  Movie movie = 1;
}

service MovieService {
  rpc getMovies (GetMoviesRequest) returns (GetMoviesResponse) {}
  rpc getOneMovie (GetOneMovieRequest) returns (GetOneMovieResponse) {}
}